# gallery

./: .env.example  .gitignore  Cargo.toml
src/: main.rs
static/: style.css
templates/: gallery.html
