[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0-alpha.1"
notify = { version = "7.0.0" }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = { version = "0.4.0" }
image = "0.25.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40"}
once_cell = "1.20.2"
dotenvy = "0.15.7"
